<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="387dp"
        tools:layout_editor_absoluteY="209dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choisissez une catégorie"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnFiction"
                android:layout_width="352dp"
                android:layout_height="116dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="21dp"
                android:text="@string/txtBtnFiction"
                android:textColor="@color/jaune"
                android:textSize="40sp"
                app:backgroundTint="@color/gris" />

            <Button
                android:id="@+id/btnDocu"
                android:layout_width="352dp"
                android:layout_height="116dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="21dp"
                android:text="@string/txtBtnDocu"
                android:textColor="@color/rouge"
                android:textSize="40sp"
                app:backgroundTint="@color/gris" />

            <Button
                android:id="@+id/btnPolicier"
                android:layout_width="352dp"
                android:layout_height="116dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="21dp"
                android:text="@string/txtBtnPolicier"
                android:textColor="@color/bleu"
                android:textSize="40sp"
                app:backgroundTint="@color/gris" />

            <Button
                android:id="@+id/btnSerie"
                android:layout_width="351dp"
                android:layout_height="116dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="21dp"
                android:text="@string/txtBtnSerie"
                android:textColor="@color/vert"
                android:textSize="40sp"
                app:backgroundTint="@color/gris" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>